--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "entity:create": "npm run typeorm entity:create",
         "migration:create": "npm run typeorm migration:create",
         "migration:generate": "npm run typeorm migration:generate -- -d ./src/main/config/typeorm.config.ts",
-        "migration:run": "npm run typeorm migration:run -- -d ./src/main/config/typeorm.config.ts"
+        "migration:run": "npm run typeorm migration:run -- -d ./src/main/config/typeorm.config.ts",
+        "test": "jest --silent --noStackTrace --runInBand",
+        "test:coverage": "jest --runInBand --coverage"
     },
     "keywords": [],
     "author": "",
@@ -22,11 +24,13 @@
         "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.0",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.14.6",
         "@types/pg": "^8.6.6",
         "@types/reflect-metadata": "^0.1.0",
         "@types/uuid": "^9.0.1",
+        "ts-jest": "^29.0.5",
         "ts-node-dev": "^2.0.0",
         "typecript": "^0.0.1-security"
     },
@@ -36,6 +40,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "ioredis": "^5.3.1",
+        "jest": "^29.5.0",
         "jsonwebtoken": "^9.0.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
