--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDirs": ["./src", "./tests"],
+    "rootDirs": ["./", "./tests"],
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "outDir": "./dist",
     "esModuleInterop": true,
